test/expected/explain_fsi_v.out
explain void f(static int x)
                      ^
23: error: function parameters can not be static
